# robospect_mission_planner

./: README.md
robospect_mission_commander/: CMakeLists.txt  package.xml  plugin.xml  setup.py
robospect_mission_commander/launch/: rostful_server.launch
robospect_mission_commander/resource/: MissionCommander_v1.ui
robospect_mission_commander/scripts/: rqt_robospect_mission_commander
robospect_mission_commander/src/robospect_mission_commander/: contact_switches_marker.py  rqt_mission_commander.py  test_contact_marker.py  waypoints_marker.py
robospect_platform_mission_manager/: CMakeLists.txt  package.xml  setup.py
robospect_platform_mission_manager/config/: config.yaml
robospect_platform_mission_manager/launch/: mission_manager.launch
robospect_platform_mission_manager/src/: robospect_platform_mission_manager.py
