<?xml version="1.0"?>
<package>
  <name>robospect_platform_mission_manager</name>
  <version>0.0.0</version>
  <description>The robospect_platform_mission_manager package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robospect_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
